--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "vendor/mo-git-blame.git"]
 	path = vendor/mo-git-blame.git
 	url = git://git.bunkus.org/mo-git-blame
+[submodule "vendor/clojure-mode"]
+	path = vendor/clojure-mode
+	url = git://github.com/jochu/clojure-mode.git
+[submodule "vendor/slime"]
+	path = vendor/slime
+	url = git://git.boinkor.net/slime.git
+[submodule "vendor/swank-clojure"]
+	path = vendor/swank-clojure
+	url = git://github.com/jochu/swank-clojure.git
