--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/swank-clojure"]
 	path = vendor/swank-clojure
 	url = git://github.com/jochu/swank-clojure.git
+[submodule "vendor/mo-git-blame"]
+	path = vendor/mo-git-blame
+	url = git://git.bunkus.org/mo-git-blame
