add undo-tree as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = vendor/anything-config
 	url = git://repo.or.cz/anything-config.git
 
+[submodule "vendor/undo-tree"]
+	path = vendor/undo-tree
+	url = http://www.dr-qubit.org/git/undo-tree.git
