--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "vendor/undo-tree"]
 	path = vendor/undo-tree
 	url = http://www.dr-qubit.org/git/undo-tree.git
+[submodule "vendor/supercollider"]
+	path = vendor/supercollider
+	url = git@github.com:samaaron/scel.git
