--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://git.bunkus.org/mo-git-blame
 [submodule "vendor/clojure-mode"]
 	path = vendor/clojure-mode
-	url = git://github.com/jochu/clojure-mode.git
+        url = http://github.com/technomancy/clojure-mode.git
 [submodule "vendor/slime"]
 	path = vendor/slime
 	url = git://git.boinkor.net/slime.git
