--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = git://git.bunkus.org/mo-git-blame
 [submodule "vendor/clojure-mode"]
 	path = vendor/clojure-mode
-        url = http://github.com/technomancy/clojure-mode.git
+	url = git://github.com/technomancy/clojure-mode.git
 [submodule "vendor/slime"]
 	path = vendor/slime
-	url = git://git.boinkor.net/slime.git
+	url = git://github.com/technomancy/slime.git
 [submodule "vendor/anything-config"]
 	path = vendor/anything-config
 	url = git://repo.or.cz/anything-config.git
