--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vendor/yaml-mode"]
 	path = vendor/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
+[submodule "git-emacs"]
+	path = git-emacs
+	url = git://github.com/tsgates/git-emacs.git
