--- a/.gitmodules
+++ b/.gitmodules
@@ -37,6 +37,6 @@
 [submodule "vendor/yaml-mode"]
 	path = vendor/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
-[submodule "git-emacs"]
-	path = git-emacs
-	url = git://github.com/tsgates/git-emacs.git
+[submodule "vendor/magit"]
+	path = vendor/magit
+	url = git://github.com/philjackson/magit.git
