add mo-git-blame files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/mo-git-blame"]
-	path = vendor/mo-git-blame.git
-	url = git://git.bunkus.org/mo-git-blame
+	path = vendor/mo-git-blame
+	url = git://git.bunkus.org/mo-git-blame.git
 [submodule "vendor/clojure-mode"]
 	path = vendor/clojure-mode
 	url = git://github.com/samaaron/clojure-mode.git
