--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vendor/smex"]
 	path = vendor/smex
 	url = http://github.com/nonsequitur/smex.git
+[submodule "vendor/submodules/align-cljlet"]
+	path = vendor/submodules/align-cljlet
+	url = git://github.com/gstamp/align-cljlet.git
