--- a/.gitmodules
+++ b/.gitmodules
@@ -1,57 +1,57 @@
-[submodule "vendor/mo-git-blame"]
-	path = vendor/mo-git-blame
+[submodule "vendor/submodules/mo-git-blame"]
+	path = vendor/submodules/mo-git-blame
 	url = git://git.bunkus.org/mo-git-blame.git
-[submodule "vendor/clojure-mode"]
-	path = vendor/clojure-mode
+[submodule "vendor/submodules/clojure-mode"]
+	path = vendor/submodules/clojure-mode
 	url = git://github.com/samaaron/clojure-mode.git
-[submodule "vendor/slime"]
-	path = vendor/slime
+[submodule "vendor/submodules/slime"]
+	path = vendor/submodules/slime
 	url = git://github.com/technomancy/slime.git
-[submodule "vendor/anything-config"]
-	path = vendor/anything-config
+[submodule "vendor/submodules/anything-config"]
+	path = vendor/submodules/anything-config
 	url = git://repo.or.cz/anything-config.git
-[submodule "vendor/undo-tree"]
-	path = vendor/undo-tree
+[submodule "vendor/submodules/undo-tree"]
+	path = vendor/submodules/undo-tree
 	url = http://www.dr-qubit.org/git/undo-tree.git
-[submodule "vendor/mk-project"]
-	path = vendor/mk-project
+[submodule "vendor/submodules/mk-project"]
+	path = vendor/submodules/mk-project
 	url = git://github.com/mattkeller/mk-project.git
-[submodule "vendor/supercollider"]
-	path = vendor/supercollider
+[submodule "vendor/submodules/supercollider"]
+	path = vendor/submodules/supercollider
 	url = git://github.com/samaaron/scel.git
-[submodule "vendor/org-mode"]
-	path = vendor/org-mode
+[submodule "vendor/submodules/org-mode"]
+	path = vendor/submodules/org-mode
 	url = git://repo.or.cz/org-mode.git
-[submodule "vendor/ibuffer-git"]
-	path = vendor/ibuffer-git
+[submodule "vendor/submodules/ibuffer-git"]
+	path = vendor/submodules/ibuffer-git
 	url = git://github.com/jrockway/ibuffer-git.git
-[submodule "vendor/nxhtml"]
-	path = vendor/nxhtml
+[submodule "vendor/submodules/nxhtml"]
+	path = vendor/submodules/nxhtml
 	url = git://github.com/emacsmirror/nxhtml.git
-[submodule "vendor/emacs-rails"]
-	path = vendor/emacs-rails
+[submodule "vendor/submodules/emacs-rails"]
+	path = vendor/submodules/emacs-rails
 	url = git://github.com/remvee/emacs-rails.git
-[submodule "vendor/rvm"]
-	path = vendor/rvm
+[submodule "vendor/submodules/rvm"]
+	path = vendor/submodules/rvm
 	url = git://github.com/senny/rvm.el.git
-[submodule "vendor/yaml-mode"]
-	path = vendor/yaml-mode
+[submodule "vendor/submodules/yaml-mode"]
+	path = vendor/submodules/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
-[submodule "vendor/magit"]
-	path = vendor/magit
+[submodule "vendor/submodules/magit"]
+	path = vendor/submodules/magit
 	url = git://github.com/philjackson/magit.git
-[submodule "vendor/ac-slime"]
-	path = vendor/ac-slime
+[submodule "vendor/submodules/ac-slime"]
+	path = vendor/submodules/ac-slime
 	url = git://github.com/purcell/ac-slime.git
-[submodule "vendor/scratch-el"]
-	path = vendor/scratch-el
+[submodule "vendor/submodules/scratch-el"]
+	path = vendor/submodules/scratch-el
 	url = git://github.com/ieure/scratch-el.git
-[submodule "vendor/elein"]
-	path = vendor/elein
+[submodule "vendor/submodules/elein"]
+	path = vendor/submodules/elein
 	url = git://github.com/remvee/elein.git
-[submodule "vendor/smex"]
-	path = vendor/smex
+[submodule "vendor/submodules/smex"]
+	path = vendor/submodules/smex
 	url = http://github.com/nonsequitur/smex.git
-[submodule "vendor/submodules/align-cljlet"]
-	path = vendor/submodules/align-cljlet
+[submodule "vendor/submodules/submodules/align-cljlet"]
+	path = vendor/submodules/submodules/align-cljlet
 	url = git://github.com/gstamp/align-cljlet.git
