--- a/.gitmodules
+++ b/.gitmodules
@@ -16,24 +16,12 @@
 [submodule "vendor/submodules/mk-project"]
 	path = vendor/submodules/mk-project
 	url = git://github.com/mattkeller/mk-project.git
-[submodule "vendor/submodules/supercollider"]
-	path = vendor/submodules/supercollider
-	url = git://github.com/samaaron/scel.git
 [submodule "vendor/submodules/org-mode"]
 	path = vendor/submodules/org-mode
 	url = git://repo.or.cz/org-mode.git
 [submodule "vendor/submodules/ibuffer-git"]
 	path = vendor/submodules/ibuffer-git
 	url = git://github.com/jrockway/ibuffer-git.git
-[submodule "vendor/submodules/nxhtml"]
-	path = vendor/submodules/nxhtml
-	url = git://github.com/emacsmirror/nxhtml.git
-[submodule "vendor/submodules/emacs-rails"]
-	path = vendor/submodules/emacs-rails
-	url = git://github.com/remvee/emacs-rails.git
-[submodule "vendor/submodules/rvm"]
-	path = vendor/submodules/rvm
-	url = git://github.com/senny/rvm.el.git
 [submodule "vendor/submodules/yaml-mode"]
 	path = vendor/submodules/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
@@ -51,7 +39,10 @@
 	url = git://github.com/remvee/elein.git
 [submodule "vendor/submodules/smex"]
 	path = vendor/submodules/smex
-	url = http://github.com/nonsequitur/smex.git
-[submodule "vendor/submodules/submodules/align-cljlet"]
-	path = vendor/submodules/submodules/align-cljlet
+	url = git://github.com/nonsequitur/smex.git
+[submodule "vendor/submodules/align-cljlet"]
+	path = vendor/submodules/align-cljlet
 	url = git://github.com/gstamp/align-cljlet.git
+[submodule "vendor/submoduels/ibuffer"]
+	path = vendor/submoduels/ibuffer
+	url = git://github.com/jrockway/ibuffer-git.git
