--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vendor/submodules/arduino-mode"]
 	path = vendor/submodules/arduino-mode
 	url = https://github.com/bookest/arduino-mode.git
+[submodule "vendor/submodules/durendal"]
+	path = vendor/submodules/durendal
+	url = git://github.com/technomancy/durendal.git
