Add SuperCollider mode back into the mix

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vendor/submodules/durendal"]
 	path = vendor/submodules/durendal
 	url = git://github.com/samaaron/durendal.git
+[submodule "vendor/submodules/scel"]
+	path = vendor/submodules/scel
+	url = git://github.com/samaaron/scel.git
