--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vendor/submodules/volatile-highlights"]
         path = vendor/submodules/volatile-highlights
         url = git://github.com/k-talo/volatile-highlights.el.git
+[submodule "vendor/submodules/clojure-mode"]
+	path = vendor/submodules/clojure-mode
+	url = git://github.com/samaaron/clojure-mode.git
