--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vendor/submodules/clojure-mode"]
         path = vendor/submodules/clojure-mode
         url = git://github.com/samaaron/clojure-mode.git
+[submodule "vendor/submodules/org-mode"]
+	path = vendor/submodules/org-mode
+	url = git://orgmode.org/org-mode.git
